hero qismi boldi

--- a/index.html
+++ b/index.html
@@ -3,8 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>6-dars</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <a href="#"
+          ><img class="your-logo" src="images/YourLogo.svg" alt=""
+        /></a>
+        <div class="">
+          <ul class="link">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#"> Products</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
+        <button class="buynow">BUY NOW</button>
+      </div>
+      <div class="hero">
+        <img class="rasm" src="images/Group 15.jpg" alt="" />
+        <img class="hero_rasm" src="images/Group 2.svg" alt="" />
+        <h2 class="hero_h2">
+          WORKING TOGHTER TOWARDS A <span class="greener">GREENER</span>
+        </h2>
+        <h1 class="hero_h1">FUTURE</h1>
+        <p class="hero_p">
+          THE GARDEN EQUIPMENT INDUSTRY NEEDS A MAJOR GREEN UPGRADE.
+        </p>
+        <button class="buynow2">BUY NOW</button>
+      </div>
+    </div>
+  </body>
 </html>
