main qismi buldi

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
@@ -45,6 +51,69 @@
           THE GARDEN EQUIPMENT INDUSTRY NEEDS A MAJOR GREEN UPGRADE.
         </p>
         <button class="buynow2">BUY NOW</button>
+      </div>
+      <div class="main">
+        <div class="box_1">
+          <iframe
+            class="video"
+            width="561"
+            height="483"
+            src="https://www.youtube.com/embed/YPG9zkTSXmk?si=LAlkjJ7kn_Ks6ek7"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <div class="box_2">
+            <p>3-IN ONE</p>
+            <p class="multi">MULTI TOOL</p>
+          </div>
+          <div class="main_right">
+            <h4 class="main_right-h4">SAW PRODUCT</h4>
+            <h2 class="main_right-h2">About the Product</h2>
+            <p class="p1">
+              To date, the lawn and garden equipment manufacturing industry is
+              worth a staggering $8.6 Billion. Gasoline-powered lawn and garden
+              equipment accounted for 24-45% of all non-road gasoline emissions,
+              according to the U.S. Environmental Protection Agency (EPA).
+            </p>
+            <p class="p2">
+              If this figure does not raise any alarms, here is some context:
+            </p>
+            <p class="p3">
+              One new gas-powered lawnmower produces the same amount of volatile
+              organic compounds in one hour of operation as 11 new cars each
+              being driven for the same amount of time.
+            </p>
+            <button class="button3">Contact Us</button>
+          </div>
+        </div>
+        <div class="main_bottom">
+          <div class="bottom_left">
+            <img src="images/Group 17.svg" alt="" />
+            <div>
+              <h5 class="h5">100% GREENG GARDENING EQUIPMENT</h5>
+
+              <p class="p_main">
+                Our products will operate on 100% sustaiinable power sources and
+                at the same time product NO harmful emissions.
+              </p>
+            </div>
+          </div>
+          <div class="bottom_left">
+            <img src="images/Group 18.svg" alt="" />
+            <div>
+              <h5 class="h5">ENHANCING OUR USER-EXPERIENCE</h5>
+
+              <p class="p_main">
+                We have merged funtion and efficiency with technogy, offering a
+                unique set of products that cater to your every need.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="foot"></div>
       </div>
     </div>
   </body>
