--- a/index.html
+++ b/index.html
@@ -113,7 +113,52 @@
             </div>
           </div>
         </div>
-        <div class="foot"></div>
+        <div class="foot">
+          <h6 class="foot_h6">FEATURES</h6>
+          <h2 class="foot_h2">FUTURISTIC COMPACT CASING</h2>
+          <p class="foot_p">
+            The ergonomic design of the multi-tool casing delivers an
+            ultra-comfortable fit in any hand
+          </p>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">High-quality trigger</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Fische renality</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Rechargeable lithium battery</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Safety lock to prevent accidental presses</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Led battery indicator lights & switch</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Anti-slip material for a comfortable grip</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Led light for added visibility</p>
+          </div>
+          <div class="foot_img">
+            <img src="images/Frame (4).svg" alt="" />
+            <p class="img-p">Durable support handle</p>
+          </div>
+          <div>
+            <img class="rec25" src="images/Rectangle 25.png" alt="" />
+            <img class="rec14" src="images/Rectangle 14.svg" alt="" />
+            <img class="rec24" src="images/Rectangle 24.png" alt="" />
+            <img class="arra" src="images/arra.svg" alt="" />
+          </div>
+        </div>
       </div>
     </div>
   </body>
